Fixes #5014 by avoiding adding whitespace and line breaks to urls
Spent the whole day on this. Really nasty problem. Happy to make any changes to it.

Unfortunately: I can't distinguish between: url(fbglyph:cross-outline , fig-white); and url(url.com/Prettier+Sans&size=500,400,300,1000,600);

However the fbglygh: syntax isn't really supported by CSS, and this change means that prettier won't break stylesheets.

--- a/tests/css/inline-url/inline_url.css
+++ b/tests/css/inline-url/inline_url.css
@@ -6,4 +6,6 @@
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=");
   background-image: url(data:application/font-woff;charset=utf-8;base64,ThisIsNormalBut/+0ThisIsLowerCased);
   background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=) center center no-repeat;
+  background-image: url("hello"+"world");
+  background-image: url(https://prettier-fonts.com/css?family=Prettier+Sans&size=500,400,300,1000,600);
 }
